# quant-research-platform

./: .env.example  .gitignore  LICENSE  NOTICE.md  README.md  design-qa.md  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: validate.yml
apps/api/app/: main.py
apps/api/tests/: test_api.py
apps/web/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.tsbuildinfo  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
artifacts/: README.md
data/: README.md
data/manifests/: demo-cn-etf-synthetic-v1.yml
data/snapshots/demo-cn-etf-synthetic-v1/: market.csv
docs/: ai-interaction-log.md  document-log.md  experiment-guide.md  index.md  reproducibility.md  strategy-development.md  worklog.md
docs/architecture/: ADR-0001-platform-layout.md
docs/classroom-report/: README.md  final_classroom_delivery.pptx  final_report.qmd  final_slides.qmd  html_header.html  index.html  report.css
docs/classroom-report/assets/: references.bib  report-style.css  (+1 more)
experiments/: registry.yml
experiments/E001-example/: README.md
experiments/templates/: experiment.yml
projects/: final_iteration_report.html
projects/classroom-presentation/: _quarto.yml  custom.scss  index.qmd  references.bib
projects/final-classroom-delivery/: .gitignore  classroom_report_body.md  delivery_manifest.md  final_narrative_draft.md  slides.qmd  supplement_rotation_and_model_questions.md
scripts/: create_demo_snapshot.py  dev.ps1  promote_run.py  reproduce.ps1  test.ps1  verify_artifacts.py
tests/: test_core.py
(+65 files in other folders)
