[project]
name = "quant-research-platform"
version = "0.1.0"
description = "Traceable strategy research, backtesting and classroom reporting"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "numpy>=2.0",
  "pandas>=2.2",
  "pydantic>=2.9",
  "pyyaml>=6.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.3", "ruff>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/quant_core", "apps/api/app"]

[tool.pytest.ini_options]
pythonpath = [".", "apps/api"]
testpaths = ["tests", "apps/api/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

